--- a/MakeFile
+++ b/MakeFile
@@ -1,17 +1,41 @@
 
+PYTHON = python3
 
 
-DIST_DIR = dist
-UTILS_DIR = utils
+.PHONY = help setup test run clean
 
-.PHONY: all clean build
+# Defining an array variable
+FILES = input output
 
-build: | clean
-	cd $(UTILS_DIR); \
-	node "build.js";
+.DEFAULT_GOAL = help
+
+# The @ makes sure that the command itself isn't echoed in the terminal
+help:
+	@echo "---------------HELP-----------------"
+	@echo "To setup the project type make setup"
+	@echo "To test the project type make test"
+	@echo "To run the project type make run"
+	@echo "------------------------------------"
+
+
+setup:
+	
+	@echo "Checking if project files are generated..."
+	[ -d project_files.project ] || (echo "No directory found, generating..." && mkdir project_files.project)
+	for FILE in ${FILES}; do \
+		touch "project_files.project/$${FILE}.txt"; \
+	done
+test:
+	${PYTHON} -m pytest
 dev_env: 
-	`echo "Installing developer requirements."`
-clean:
-	rm -rf $(DIST_DIR)
+	pip install "requirements.txt"
+	
+run:
+	${PYTHON} our_app.py
 
-all: clean build
+
+clean:
+	rm -r *.project
+
+
+
